# Cloudflare-Firewall-Rules-Web

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
expressions/: Bad AS.txt  Bad Bots lib.txt  Bad Bots.txt  Bad IPs.txt  Bad URLs.txt  SQL injections.txt  Social + SEO + Preview websites.txt
static/: package-lock.json  package.json
static/js/: editor.js  help.js  monaco.js  select.js
static/scss/: app.scss  components.scss  libs.scss  style.scss
templates/: base.jinja2  components.jinja2  footer.jinja2  header.jinja2  index.jinja2  profile.jinja2
